chore: remove legacy forum runtime surface